[package]
name = "ryp"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
syntect = "5.3.0"
unicode-width = "0.2.2"
ignore = "0.4.25"
portable-pty = "0.9.0"
tokio = "1.52.0"
crossbeam-channel = "0.5.15"
strip-ansi-escapes = "0.2.1" # Not used; Consider removing?
vt100="0.16.2"
aho-corasick="1.1.4"
console="0.16.3"
mlua = { version = "0.11.6", features = ["lua55", "serialize", "serde"] }
indexmap="2.14.0"
crossbeam="0.8.4"
oneshot="0.2.1"
parking_lot="0.12.5"
triomphe="0.1.15"
hashbrown="0.17.0"
